Fix more issues with alignment of share stuff.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -336,6 +336,7 @@ header[role="banner"] {
 
 		.share {
 			margin: 2em;
+			line-height: .75em;
 		}
 	}
 }
